--- a/index.html
+++ b/index.html
@@ -11,99 +11,103 @@
   <title>Clon Pinterest</title>
 </head>
 <body>
-  <nav class="container" id="navbar-pinterest">
-    <a href="https://www.pinterest.com">
-      <div class="icon" id="pinterest-icon">
-        <svg height="24" width="24" viewBox="0 0 24 24">
-          <path 
-            fill="#c00" d="M0 12c0 5.123 3.211 9.497 7.73 11.218-.11-.937-.227-2.482.025-3.566.217-.932 1.401-5.938 1.401-5.938s-.357-.715-.357-1.774c0-1.66.962-2.9 2.161-2.9 1.02 0 1.512.765 1.512 1.682 0 1.025-.653 2.557-.99 3.978-.281 1.189.597 2.159 1.769 2.159 2.123 0 3.756-2.239 3.756-5.471 0-2.861-2.056-4.86-4.991-4.86-3.398 0-5.393 2.549-5.393 5.184 0 1.027.395 2.127.889 2.726a.36.36 0 0 1 .083.343c-.091.378-.293 1.189-.332 1.355-.053.218-.173.265-.4.159-1.492-.694-2.424-2.875-2.424-4.627 0-3.769 2.737-7.229 7.892-7.229 4.144 0 7.365 2.953 7.365 6.899 0 4.117-2.595 7.431-6.199 7.431-1.211 0-2.348-.63-2.738-1.373 0 0-.599 2.282-.744 2.84-.282 1.084-1.064 2.456-1.549 3.235C9.584 23.815 10.77 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12"
+  <div class="center">
+    <nav class="container" id="navbar-pinterest">
+      <a href="https://www.pinterest.com">
+        <div class="icon" id="pinterest-icon">
+          <svg height="24" width="24" viewBox="0 0 24 24">
+            <path
+              fill="#c00" d="M0 12c0 5.123 3.211 9.497 7.73 11.218-.11-.937-.227-2.482.025-3.566.217-.932 1.401-5.938 1.401-5.938s-.357-.715-.357-1.774c0-1.66.962-2.9 2.161-2.9 1.02 0 1.512.765 1.512 1.682 0 1.025-.653 2.557-.99 3.978-.281 1.189.597 2.159 1.769 2.159 2.123 0 3.756-2.239 3.756-5.471 0-2.861-2.056-4.86-4.991-4.86-3.398 0-5.393 2.549-5.393 5.184 0 1.027.395 2.127.889 2.726a.36.36 0 0 1 .083.343c-.091.378-.293 1.189-.332 1.355-.053.218-.173.265-.4.159-1.492-.694-2.424-2.875-2.424-4.627 0-3.769 2.737-7.229 7.892-7.229 4.144 0 7.365 2.953 7.365 6.899 0 4.117-2.595 7.431-6.199 7.431-1.211 0-2.348-.63-2.738-1.373 0 0-.599 2.282-.744 2.84-.282 1.084-1.064 2.456-1.549 3.235C9.584 23.815 10.77 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12"
+            />
+          </svg>
+        </div>
+      </a>
+      <div id="switch-page">
+        <div id="btn-inicio">Inicio</div>
+        <div class="arrow"></div>
+      </div>
+      <div id="btn-hoy">Hoy</div>
+      <div class="finder icon">
+        <input placeholder="Buscar">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path
+            fill="#767676" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
           />
         </svg>
       </div>
-    </a>
-    <div id="switch-page">
-      <div id="btn-inicio">Inicio</div>
-      <div class="arrow"></div>
-    </div>
-    <div class="finder icon">
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path 
-          fill="#767676" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
-        />
-      </svg>
-    </div>
-    <div class="icon" id="add-pin">
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path fill="#767676" d="M20 14H14V20H10V14H4V10H10V4H14V10H20V14Z" />
-      </svg>
-    </div>
-    <div class="modal" id="add-pin-modal">
-      <div>Crear un Idea Pin</div>
-      <div>Crear Pin</div>
-    </div>
-    <div class="icon" id="notifications">
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path 
-          fill="#767676" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
-        />
-      </svg>
-    </div>
-    <div class="modal" id="notifications-modal">
-      <div style="margin-bottom: auto; padding: 15px 0;">Actualizaciones</div>
-      <img src="./assets/img/noti.png" width="180px" alt="notification bell" style="margin: auto; padding: 8px 0;">
-      <div><h3>Nada nuevo por aquí (aún)</h3></div>
-      <div style="font-weight: 400; font-size: 14px; padding: 4px 32px; margin-bottom: auto;">
-        Intenta explorar tu feed de inicio, crear un tablero o seguir a alguien que tenga ideas que te inspiren.
+      <div class="icon" id="add-pin">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path fill="#767676" d="M20 14H14V20H10V14H4V10H10V4H14V10H20V14Z" />
+        </svg>
       </div>
-    </div>
-    <div class="icon" id="message">
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path 
-          fill="#767676" d="M12,3C17.5,3 22,6.58 22,11C22,15.42 17.5,19 12,19C10.76,19 9.57,18.82 8.47,18.5C5.55,21 2,21 2,21C4.33,18.67 4.7,17.1 4.75,16.5C3.05,15.07 2,13.13 2,11C2,6.58 6.5,3 12,3M17,12V10H15V12H17M13,12V10H11V12H13M9,12V10H7V12H9Z"
-        />
-      </svg>
-    </div>
-    <div class="modal" id="message-modal">
-      <div style="height: 64px; padding: 8px; text-align: center;">Bandeja de entrada</div>
-      <div style="padding: 0 8px;">
-        <div><h2>Comparte ideas con amigos</h2></div>
-        <input type="text" placeholder="Buscar por nombre o correo">
+      <div class="modal" id="add-pin-modal">
+        <div>Crear un Idea Pin</div>
+        <div>Crear Pin</div>
       </div>
-    </div>
-    <div class="icon" id="profile-img" title="CARLOS URIEL ZAMORA ORTEGA">
-      <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-        <path
-          fill="#767676" d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
-        />
-      </svg>
-    </div>
-    <div class="arrow" id="more-options" style="cursor: pointer;"></div>
-    <div class="modal" id="more-options-modal">
-      <div style="font-size: 10; font-weight: 400;"><small>Actualmente en</small></div>
-      <div class="hover" style="display: flex;">
-        <div style="display:flex; align-items: center; justify-content: center; font-size: 24; background-color: #76767622; border-radius: 50%; width: 60px; height: 60px; margin-right: 12px;">C</div>
-        <div>
-          <div>CARLOS URIEL ZAMORA ORTEGA</div>
-          <div style="font-size: 10; font-weight: 400;"><small>Personal</small></div>
-          <div style="font-size: 10; font-weight: 400;"><small>czamora5@ucol.mx</small></div>
+      <div class="icon" id="notifications">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path
+            fill="#767676" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
+          />
+        </svg>
+      </div>
+      <div class="modal" id="notifications-modal">
+        <div style="margin-bottom: auto; padding: 15px 0;">Actualizaciones</div>
+        <img src="./assets/img/noti.png" width="180px" alt="notification bell" style="margin: auto; padding: 8px 0;">
+        <div><h3>Nada nuevo por aquí (aún)</h3></div>
+        <div style="font-weight: 400; font-size: 14px; padding: 4px 32px; margin-bottom: auto;">
+          Intenta explorar tu feed de inicio, crear un tablero o seguir a alguien que tenga ideas que te inspiren.
         </div>
       </div>
-      <div class="options-info">
-        <div style="font-size: 10; font-weight: 400;"><small>Tus cuentas</small></div>
-        <div class="hover">Agregar cuenta</div>
-        <div class="hover">Convertir en cuenta para empresa</div>
+      <div class="icon" id="message">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path
+            fill="#767676" d="M12,3C17.5,3 22,6.58 22,11C22,15.42 17.5,19 12,19C10.76,19 9.57,18.82 8.47,18.5C5.55,21 2,21 2,21C4.33,18.67 4.7,17.1 4.75,16.5C3.05,15.07 2,13.13 2,11C2,6.58 6.5,3 12,3M17,12V10H15V12H17M13,12V10H11V12H13M9,12V10H7V12H9Z"
+          />
+        </svg>
       </div>
-      <div class="options-info">
-        <div style="font-size: 10; font-weight: 400;"><small>Más opciones</small></div>
-        <div class="hover">Configuración</div>
-        <div class="hover">Mejora tu feed de inicio</div>
-        <div class="hover">Instala la aplicación de Windows</div>
-        <div class="hover">Obtener ayuda</div>
-        <div class="hover">Ver condiciones de privacidad</div>
-        <div class="hover">Salir</div>
+      <div class="modal" id="message-modal">
+        <div style="height: 64px; padding: 8px; text-align: center;">Bandeja de entrada</div>
+        <div style="padding: 0 8px;">
+          <div><h2>Comparte ideas con amigos</h2></div>
+          <input type="text" placeholder="Buscar por nombre o correo">
+        </div>
       </div>
-    </div>
-  </nav>
+      <div class="icon" id="profile-img" title="CARLOS URIEL ZAMORA ORTEGA">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path
+            fill="#767676" d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
+          />
+        </svg>
+      </div>
+      <div class="arrow" id="more-options" style="cursor: pointer;"></div>
+      <div class="modal" id="more-options-modal">
+        <div style="font-size: 10; font-weight: 400;"><small>Actualmente en</small></div>
+        <div class="hover" style="display: flex;">
+          <div style="display:flex; align-items: center; justify-content: center; font-size: 24; background-color: #76767622; border-radius: 50%; width: 60px; height: 60px; margin-right: 12px;">C</div>
+          <div>
+            <div>CARLOS URIEL ZAMORA ORTEGA</div>
+            <div style="font-size: 10; font-weight: 400;"><small>Personal</small></div>
+            <div style="font-size: 10; font-weight: 400;"><small>czamora5@ucol.mx</small></div>
+          </div>
+        </div>
+        <div class="options-info">
+          <div style="font-size: 10; font-weight: 400;"><small>Tus cuentas</small></div>
+          <div class="hover">Agregar cuenta</div>
+          <div class="hover">Convertir en cuenta para empresa</div>
+        </div>
+        <div class="options-info">
+          <div style="font-size: 10; font-weight: 400;"><small>Más opciones</small></div>
+          <div class="hover">Configuración</div>
+          <div class="hover">Mejora tu feed de inicio</div>
+          <div class="hover">Instala la aplicación de Windows</div>
+          <div class="hover">Obtener ayuda</div>
+          <div class="hover">Ver condiciones de privacidad</div>
+          <div class="hover">Salir</div>
+        </div>
+      </div>
+    </nav>
+  </div>
   <main class="container" id="content"></main>
   <script src="./main.js"></script>
 </body>
